Changes done according to 4.8

--- a/content-api/content-service/conf/application.conf
+++ b/content-api/content-service/conf/application.conf
@@ -737,8 +737,13 @@ collection {
 	}
 }
 
-#Request timeout
-actor.timeoutMillisec = 30000 
-
 #Index file validation
-isIndexHtmlValidationRequired=true
+indexHtmlValidation.env=false
+# Resource change for root Hierarchy level
+hierarchyUpdate.allow.resource.at.root.level=false
+
+#timeout
+actor.timeoutMillisec = 120000
+
+# Artifact Url allowed for copy resource
+content.copy.is_copy_artifacturl= true
